Added missing --add-reads for the surefire plugin